--- a/vscode-highlight/package.json
+++ b/vscode-highlight/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aqua",
+  "name": "aqua-syntax-highlight",
   "displayName": "aqua",
   "description": "aqua language support",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.56.0"
   },
