--- a/vscode-highlight/package.json
+++ b/vscode-highlight/package.json
@@ -3,6 +3,7 @@
   "displayName": "aqua",
   "description": "aqua language support",
   "publisher": "FluenceLabs",
+  "icon": "icon.png",
   "repository": {
     "url": "https://github.com/fluencelabs/aqua-tooling"
   },
