--- a/.github/workflows/vscode_highlight.yml
+++ b/.github/workflows/vscode_highlight.yml
@@ -89,13 +89,14 @@ jobs:
           vsce package
 
       ### create release
-      uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: VERSION ${{ env.VERSION }}
-          body_path: |
-            ${{ env.PKG_FILE }}
-          draft: true
-          prerelease: false
+      - name: Create Release
+        uses: actions/create-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            tag_name: ${{ github.ref }}
+            release_name: VERSION ${{ env.VERSION }}
+            body_path: |
+              ${{ env.PKG_FILE }}
+            draft: true
+            prerelease: false
