--- a/.github/workflows/vscode_highlight.yml
+++ b/.github/workflows/vscode_highlight.yml
@@ -89,13 +89,14 @@ jobs:
           vsce package
 
       ### create release
-      - uses: actions/create-release@v1
+      - uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: VERSION ${{ env.FINAL_VERSION }}
-          body_path: |
+          release_name: Visual Studio Code syntax highlight ${{ env.FINAL_VERSION }}
+          body: |
+            Version: ${{ env.FINAL_VERSION }}
+          files: |
             ${{ env.PKG_FILE }}
           draft: true
           prerelease: false
