--- a/.github/workflows/vscode_highlight.yml
+++ b/.github/workflows/vscode_highlight.yml
@@ -94,7 +94,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Visual Studio Code syntax highlight ${{ env.FINAL_VERSION }}
+          name: Visual Studio Code syntax highlight ${{ env.FINAL_VERSION }}
           body: |
             Version: ${{ env.FINAL_VERSION }}
           files: |
