prerelease true draft false

--- a/.github/workflows/vscode_highlight.yml
+++ b/.github/workflows/vscode_highlight.yml
@@ -99,5 +99,5 @@ jobs:
             Version: ${{ env.FINAL_VERSION }}
           files: |
             ${{ env.PKG_FILE }}
-          draft: true
-          prerelease: false
+          draft: false
+          prerelease: true
