--- a/.github/workflows/vscode_highlight.yml
+++ b/.github/workflows/vscode_highlight.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Get version from npm and increment
         run: |
           cd vscode-highlight
-          VERSION="1.0.{{ github.run_number }}"
+          VERSION="1.0.${{ github.run_number }}"
 
           # save info to env
           echo "FINAL_VERSION=$VERSION" | tee -a $GITHUB_ENV
