--- a/.github/workflows/vscode_highlight.yml
+++ b/.github/workflows/vscode_highlight.yml
@@ -75,6 +75,6 @@ jobs:
             Version: ${{ env.FINAL_VERSION }}
           files: |
             ${{ env.PKG_FILE }}
-          draft: false
-          prerelease: true
+          draft: true
+          prerelease: false
 
