--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,8 +5,8 @@ on:
     # uncomment to release only on tags starting with 'v'
     # tags:
     #   - "v*"
-    #branches:
-    #  - "main"
+    branches:
+      - "main"
 
   workflow_dispatch:
 
@@ -60,7 +60,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - name: build package
         run: |
-          npm i -g vsce
+          npm i -g vsce --yarn
           vsce package
           vsce publish
 
