--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,8 +53,6 @@ jobs:
 
       ### Pack vsix package
       - uses: actions/setup-node@v1
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
         with:
           node-version: "15"
           registry-url: "https://registry.npmjs.org"
@@ -62,7 +60,7 @@ jobs:
         run: |
           npm i -g vsce
           vsce package
-          vsce publish --yarn
+          vsce publish -p ${{ secrets.VSCE_PAT }}
 
       ### create release
       - uses: softprops/action-gh-release@v1
