--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,21 +1,21 @@
 {
-    "comments": {
-        "lineComment": "--",
-    },
-    "brackets": [
-        ["[", "]"],
-        ["(", ")"]
-    ],
-    "autoClosingPairs": [
-        ["[", "]"],
-        ["(", ")"],
-        ["\"", "\""],
-        ["%", "%"]
-    ],
-    "surroundingPairs": [
-        ["[", "]"],
-        ["(", ")"],
-        ["\"", "\""],
-        ["%", "%"]
-    ]
+  "comments": {
+    "lineComment": "--"
+  },
+  "brackets": [
+    ["[", "]"],
+    ["(", ")"]
+  ],
+  "autoClosingPairs": [
+    ["[", "]"],
+    ["(", ")"],
+    ["\"", "\""],
+    ["%", "%"]
+  ],
+  "surroundingPairs": [
+    ["[", "]"],
+    ["(", ")"],
+    ["\"", "\""],
+    ["%", "%"]
+  ]
 }
