--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"vscode-languageserver": "^7.0.0",
 		"vscode-languageserver-textdocument": "^1.0.4",
-		"global-dirs": "^3.0.0"
+		"global-dirs": "^3.0.0",
+		"@fluencelabs/aqua-language-server-api": "0.0.2"
 	},
 	"scripts": {
 		"get-root": "npm root --globall"
