--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
 	"declaration": true,
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es2020",
-		"lib": ["es2020"],
+		"target": "ES5",
 		"outDir": "out",
 		"rootDir": "src",
 		"sourceMap": true
@@ -22,5 +21,6 @@
 	"references": [
 		{ "path": "./client" },
 		{ "path": "./server" }
-	]
+	],
+	"extends": "@tsconfig/node16-strictest/tsconfig.json"
 }
