--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,12 +1,12 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es2020",
-		"lib": ["es2020"],
+		"target": "ES5",
 		"outDir": "out",
 		"rootDir": "src",
 		"sourceMap": true
 	},
 	"include": ["src"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
+	"extends": "@tsconfig/node16-strictest/tsconfig.json"
 }
