--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
 			}
 		}
 	},
+	"prettier": {
+		"singleQuote": true
+	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -b",
@@ -63,12 +66,19 @@
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd .."
 	},
 	"devDependencies": {
+		"@tsconfig/node16-strictest": "^1.0.1",
 		"@types/mocha": "^9.1.0",
 		"@types/node": "^14.17.0",
-		"@typescript-eslint/eslint-plugin": "^5.19.0",
-		"@typescript-eslint/parser": "^5.19.0",
-		"eslint": "^8.13.0",
+		"@typescript-eslint/eslint-plugin": "^5.23.0",
+		"@typescript-eslint/parser": "^5.23.0",
+		"eslint": "^8.15.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.2.0",
+		"eslint-plugin-promise": "^6.0.0",
 		"mocha": "^9.2.1",
+		"prettier": "2.6.2",
 		"typescript": "^4.6.3"
 	}
 }
