--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,15 +1,19 @@
 {
-	"allowJs": true,
-	"compilerOptions": {
-		"target": "ES5",
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"strict": true,
-		"outDir": "out",
-		"rootDir": "src"
-	},
-	"include": ["src"],
-	"exclude": ["node_modules"],
-	"extends": "@tsconfig/node16-strictest/tsconfig.json"
+  "allowJs": true,
+  "compilerOptions": {
+    "target": "ES5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "strict": true,
+    "outDir": "out",
+    "rootDir": "src"
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "@tsconfig/node16-strictest/tsconfig.json"
 }
