--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,16 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES5",
-    "outDir": "out",
-    "rootDir": "src",
-    "sourceMap": true
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
-  "extends": "@tsconfig/node16-strictest/tsconfig.json"
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "ES5",
+        "outDir": "out",
+        "rootDir": "src",
+        "sourceMap": true
+    },
+    "include": ["src"],
+    "exclude": ["node_modules"],
+    "extends": "@tsconfig/node16-strictest/tsconfig.json"
 }
