feat: add `useOnlyImportsFromSettings` flag (#41)

--- a/package.json
+++ b/package.json
@@ -62,11 +62,19 @@
             "type": "object",
             "title": "Aqua",
             "properties": {
-                "aquaSettings.imports": {
-                    "scope": "resource",
-                    "type": "array",
-                    "default": [],
-                    "description": "Adds imports for aqua file or project"
+                "aquaSettings": {
+                    "imports": {
+                        "scope": "resource",
+                        "type": "array",
+                        "default": [],
+                        "description": "Adds imports for aqua file or project"
+                    },
+                    "enableLegacyAutoImportSearch": {
+                        "scope": "resource",
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Do not look for extra imports"
+                    }
                 }
             }
         }
