--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
         "url": "https://github.com/fluencelabs/aqua"
     },
     "dependencies": {
-        "@fluencelabs/aqua-language-server-api": "0.12.2",
+        "@fluencelabs/aqua-language-server-api": "0.12.2-feat-lsp-info-type-bd08da5-1841-1",
         "global-dirs": "^3.0.0",
         "vscode-languageserver": "^7.0.0",
         "vscode-languageserver-textdocument": "^1.0.4"
