--- a/package.json
+++ b/package.json
@@ -62,19 +62,17 @@
             "type": "object",
             "title": "Aqua",
             "properties": {
-                "aquaSettings": {
-                    "imports": {
-                        "scope": "resource",
-                        "type": "array",
-                        "default": [],
-                        "description": "Adds imports for aqua file or project"
-                    },
-                    "enableLegacyAutoImportSearch": {
-                        "scope": "resource",
-                        "type": "boolean",
-                        "default": false,
-                        "description": "Do not look for extra imports"
-                    }
+                "aquaSettings.imports": {
+                    "scope": "resource",
+                    "type": "array",
+                    "default": [],
+                    "description": "Adds imports for aqua file or project"
+                },
+                "aquaSettings.enableLegacyAutoImportSearch": {
+                    "scope": "resource",
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Do not look for extra imports"
                 }
             }
         }
