Rewrite settings manager

--- a/package.json
+++ b/package.json
@@ -76,7 +76,10 @@
                 },
                 "aquaSettings.fluencePath": {
                     "scope": "resource",
-                    "type": ["string", "null"],
+                    "type": [
+                        "string",
+                        "null"
+                    ],
                     "default": null,
                     "description": "Path to fluence CLI executable"
                 }
