--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,12 @@
         "url": "https://github.com/fluencelabs/aqua"
     },
     "dependencies": {
-        "@fluencelabs/aqua-language-server-api": "file:../../aqua/language-server/language-server-npm",
+        "@fluencelabs/aqua-language-server-api": "0.13.1",
         "global-dirs": "^3.0.0",
         "vscode-languageserver": "^7.0.0",
         "vscode-languageserver-textdocument": "^1.0.4"
     },
     "scripts": {
-        "get-root": "npm root --globall"
+        "get-root": "npm root --global"
     }
 }
