--- a/package.json
+++ b/package.json
@@ -76,9 +76,18 @@
                 },
                 "aquaSettings.fluencePath": {
                     "scope": "resource",
-                    "type": ["string", "null"],
+                    "type": [
+                        "string",
+                        "null"
+                    ],
                     "default": null,
                     "description": "Path to fluence CLI executable"
+                },
+                "aquaSettings.fluenceCallDelay": {
+                    "scope": "resource",
+                    "type": "number",
+                    "default": 5000,
+                    "description": "Minimal delay (ms) between calls to fluence CLI (for one file)"
                 }
             }
         }
