--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
         "@fluencelabs/aqua-language-server-api": "0.13.1",
         "global-dirs": "^3.0.0",
         "vscode-languageserver": "^7.0.0",
-        "vscode-languageserver-textdocument": "^1.0.4"
+        "vscode-languageserver-textdocument": "^1.0.4",
+        "vscode-uri": "3.0.8"
     },
     "scripts": {
         "get-root": "npm root --global"
