--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
         "vscode-languageclient": "^7.0.0"
     },
     "devDependencies": {
-        "@types/vscode": "^1.63.0",
-        "@vscode/test-electron": "^2.1.2"
+        "@types/vscode": "^1.63.0"
     }
 }
