feat(tests): Add integration tests [LNG-318] (#76)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules
 *.vsix
 *.tgz
+.vscode-test
 
 server/out
 client/out
+integration-tests/out
+integration-tests/test-workspace/fluenceProject
+!integration-tests/test-workspace/fluenceProject/src/aqua/test.aqua
