--- a/package.json
+++ b/package.json
@@ -126,6 +126,8 @@
         }
     },
     "scripts": {
+        "before-tests": "bash integration-tests/before-tests.sh",
+        "test": "npm run compile && vscode-test",
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -b",
         "watch": "tsc -b -w",
@@ -138,6 +140,9 @@
         "@types/node": "^14.17.0",
         "@typescript-eslint/eslint-plugin": "^5.23.0",
         "@typescript-eslint/parser": "^5.23.0",
+        "@vscode/test-cli": "^0.0.4",
+        "@vscode/test-electron": "^2.3.8",
+        "@types/vscode": "^1.63.0",
         "eslint": "^8.15.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-standard": "^17.0.0",
