--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,11 @@
         "vscode-uri": "3.0.8"
     },
     "devDependencies": {
-        "@types/mocha": "^9.1.0",
-        "mocha": "^9.1.0"
+        "@types/mocha": "^10.0.0",
+        "ts-mocha": "^10.0.0"
     },
     "scripts": {
-        "test": "mocha",
+        "test": "ts-mocha",
         "get-root": "npm root --global"
     }
 }
