--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,17 +7,13 @@ on:
                 description: 'git ref to checkout to'
                 type: string
                 default: 'main'
-            fcli-version:
-                description: 'fcli version to use'
-                type: string
-                default: 'main'
 
 env:
     FORCE_COLOR: true
 
 jobs:
     aqua-vscode:
-        name: 'Run integration tests'
+        name: 'Run unit tests'
         runs-on: ubuntu-latest
         timeout-minutes: 60
 
@@ -34,19 +30,10 @@ jobs:
                   node-version: 18
                   cache: 'npm'
 
-            - name: Setup fcli
-              uses: fluencelabs/setup-fluence@v1
-              with:
-                  artifact: fcli
-                  version: ${{ inputs.fcli-version }}
-
             - name: Install dependencies
               run: npm ci
-
-            - name: Run before-tests
-              run: npm run before-tests
 
             - name: Run tests
               uses: coactions/setup-xvfb@v1
               with:
-                  run: npm run test
+                  run: npm run test:unit
